# InEfAn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CPackHelper.cmake  NSIS.template.in  VersionConfGit.cmake  integrate-boost.cmake  projecthelper.cmake
src/: CMakeLists.txt
src/InEfAn-tray/: CMakeLists.txt  Version.inl.conf  Win32TrayApp.cpp  Win32TrayApp.rc  app-id.h  backend-bridge.h  events-logging.cpp  events-logging.h  guid.h  httprequest.h  keycode-deanonimizer.h  language-change-listener.cpp  language-change-listener.h  resource-App.h  single-instance.h  tray-helpers.cpp  tray-helpers.h  win-firewall.cpp  win-firewall.h  win-reg.cpp  win-reg.h  win.manifest
src/active-app-tracker/: ActiveWindowTracker.cpp  ActiveWindowTracker.h  CMakeLists.txt  WindowInfo.cpp  WindowInfo.h  test.cpp
src/analysis/: analyse.py  characteristics.py  chart.py  db_bridge.py  exhibit.py  join_splitted_files.py  log_anal.bat  log_parse.py  stat_settings.py  utils.py
src/analysis/res/: present-slides.js  stat-slides.css
src/input-hooker/: CMakeLists.txt  EventLogger.h  InputEvent.h  InputEventTypes.h  hooker-test.cpp  input-event-types.h  input-event.cpp  input-event.h  input-hooker-dll.cpp  input-hooker-dll.h  input-hooker.cpp  input-hooker.h  keycodes-anonimized.h  keycodes.h
src/log-anal/: log-parse.bat  log-parse.py  log_anal.bat  log_anal.py  log_parse.py  log_plot.py  log_utils.py
src/logger/: CMakeLists.txt  log-helpers.cpp  log-helpers.h  log2file.cpp  log2file.h  logger.h
src/test/: CMakeLists.txt  filePostingTest.cpp  filePostingTest.txt
